Fix z-index for header (caused missing box shadow)

--- a/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/haddock/skins/denkbares/skin.css
+++ b/KnowWE-Essentials/KnowWE-Resources/src/main/webapp/templates/haddock/skins/denkbares/skin.css
@@ -2545,7 +2545,7 @@ li.findpages .btn {
 	display: none;
 }
 
-.header {
+.haddock .fixed-header > .header, .header {
 	z-index: 1001;
 }
 
